# REE_OpenClaw

./: .gitignore  CITATION.cff  Makefile  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/capabilities/: default_manifest.json
docs/: architecture.md  milestones_m0_m5_audit.md  roadmap_autonomous_agent.md  visibility_strategy.md
docs/contracts/: autonomous_session_orchestration.md  llm_call_routing.md  offline_consolidation.md  proposal_commit_execution_cycle.md  rc_conflict_hysteresis.md  rollout_interface.md  skill_capability_manifest.md  trusted_store_boundary.md  user_interaction_and_delegation.md
evidence/experiments/: INTERFACE_CONTRACT.md
evidence/planning/weekly_handoff/: latest.md
sandbox/: Dockerfile  README.md
scripts/: generate_weekly_handoff.py  run_runtime_authority_probes.py  run_sandbox_tests.sh  validate_experiment_packs.py
src/ree_openclaw/: __init__.py  cli.py  types.py
src/ree_openclaw/adapter/: __init__.py  routing.py
src/ree_openclaw/agent/: __init__.py  autonomy.py  memory.py
src/ree_openclaw/commit/: __init__.py  token.py
src/ree_openclaw/ledger/: __init__.py  append_only.py
src/ree_openclaw/offline/: __init__.py  consolidation.py
src/ree_openclaw/rc/: __init__.py  hysteresis.py  scoring.py
src/ree_openclaw/rollout/: __init__.py  planner.py
src/ree_openclaw/runtime/: __init__.py  pipeline.py
src/ree_openclaw/sandbox/: __init__.py  harness.py
src/ree_openclaw/stores/: __init__.py  trusted.py
src/ree_openclaw/verifier/: __init__.py  capability_manifest.py  verifier.py
tests/: test_autonomy_runner.py  test_ledger.py  test_offline_consolidation.py  test_rc_hysteresis.py  test_rc_scoring.py  test_rollout_planner.py  test_routing.py  test_runtime_pipeline.py  test_sandbox.py  test_trusted_stores.py  test_verifier.py
